@@ -17,14 +17,13 @@ package ghidra.app.util.opinion;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang3.ObjectUtils;
 
 import ghidra.app.util.Option;
 import ghidra.app.util.OptionUtils;
@@ -32,6 +31,7 @@ import ghidra.app.util.bin.ByteProvider;
 import ghidra.app.util.importer.*;
 import ghidra.formats.gfilesystem.*;
 import ghidra.framework.model.*;
+import ghidra.plugin.importer.ImporterPlugin;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.lang.*;
 import ghidra.program.model.listing.Library;
@@ -50,23 +50,51 @@ import ghidra.util.task.TaskMonitor;
  */
 public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader {
 
+	/**
+	 * Option to attempt to fix up the {@link Loaded} {@link Program}'s external programs with
+	 * libraries discovered in the project. This alone does not cause new library programs to be 
+	 * loaded.
+	 */
 	public static final String LINK_EXISTING_OPTION_NAME = "Link Existing Project Libraries";
 	static final boolean LINK_EXISTING_OPTION_DEFAULT = true;
 
+	/**
+	 * Path of a {@link DomainFolder} to search for libraries
+	 */
 	public static final String LINK_SEARCH_FOLDER_OPTION_NAME = "Project Library Search Folder";
 	static final String LINK_SEARCH_FOLDER_OPTION_DEFAULT = "";
 
+	/**
+	 * Whether or not to search for libraries on disk (or in a {@link GFileSystem})
+	 */
 	public static final String LOAD_LIBRARY_OPTION_NAME = "Load Libraries From Disk";
 	static final boolean LOAD_LIBRARY_OPTION_DEFAULT = false;
-
+	
+	/**
+	 * A dummy option used to produce a custom renderer to select library search paths.
+	 * 
+	 * @see LibrarySearchPathDummyOption
+	 */
 	public static final String LIBRARY_SEARCH_PATH_DUMMY_OPTION_NAME = "Library Search Paths";
 
+	/**
+	 * How many levels of libraries to load
+	 */
 	public static final String DEPTH_OPTION_NAME = "Recursive Library Load Depth";
 	static final int DEPTH_OPTION_DEFAULT = 1;
 
+	/**
+	 * Path of a {@link DomainFolder} to save libraries to. This location will also be used as
+	 * a location to {@link #LINK_EXISTING_OPTION_NAME search for already-loaded libraries}.
+	 */
 	public static final String LIBRARY_DEST_FOLDER_OPTION_NAME = "Library Destination Folder";
 	static final String LIBRARY_DEST_FOLDER_OPTION_DEFAULT = "";
 
+	/**
+	 * A hidden option used by the {@link ImporterPlugin}'s "Load Libraries" action to inform this
+	 * {@link Loader} that the {@link Program} to import has already been saved to the project and
+	 * is currently open, and that only libraries should be loaded.
+	 */
 	public static final String LOAD_ONLY_LIBRARIES_OPTION_NAME = "Only Load Libraries"; // hidden
 	static final boolean LOAD_ONLY_LIBRARIES_OPTION_DEFAULT = false;
 
@@ -86,6 +114,31 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 			Program program, TaskMonitor monitor, MessageLog log)
 			throws CancelledException, IOException;
 
+	/**
+	 * {@inheritDoc}
+	 * <p>
+	 * In addition to loading the given program bytes, this implementation will attempt to locate
+	 * the libraries that the program links to from the
+	 * {@link #LINK_SEARCH_FOLDER_OPTION_NAME project library search folder}, the
+	 * {@link #LIBRARY_DEST_FOLDER_OPTION_NAME library destination folder} and the
+	 * {@link #LOAD_LIBRARY_OPTION_NAME libraries found on disk}. All of these locations are
+	 * controlled by loader options.
+	 * <P>
+	 * If the hidden {@link #LOAD_ONLY_LIBRARIES_OPTION_NAME} option is set and the given project
+	 * is not {@code null}, it is assumed that a {@link DomainFile} exists at 
+	 * {@code projectFolderPath/loadedName}, is open, and the provider corresponds to its contents.
+	 * If this is the case, the primary (first) {@link Loaded} {@link Program} in the returned list
+	 * will NOT be affected by a {@link LoadResults#save(TaskMonitor)} operation. It will be the 
+	 * responsibility of the user to save this open program if desired.
+	 * 
+	 * @return A {@link List} of one or more {@link Loaded} {@link Program}s (created but not 
+	 *   saved). The first element in the {@link List} will the primary program, with the remaining
+	 *   elements being any newly loaded libraries.
+	 * @throws LoadException if the load failed in an unexpected way. If the
+	 *   {@link #LOAD_ONLY_LIBRARIES_OPTION_NAME} option is set, this exception will be thrown if
+	 *   the {@link DomainFile} at {@code projectFolderPath/loadedName} does not correspond to an 
+	 *   open {@link Program}.
+	 */
 	@Override
 	protected List<Loaded<Program>> loadProgram(ByteProvider provider, String loadedName,
 			Project project, String projectFolderPath, LoadSpec loadSpec, List<Option> options,
@@ -102,35 +155,41 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 			if (!shouldLoadOnlyLibraries(options)) {
 				program = doLoad(provider, loadedName, loadSpec, libraryNameList, options, consumer,
 					log, monitor);
-				loadedProgramList.add(new Loaded<>(program, loadedName, projectFolderPath));
+				loadedProgramList.add(
+					new Loaded<>(program, loadedName, project, projectFolderPath, consumer));
 				log.appendMsg("------------------------------------------------\n");
 			}
-			else if (project != null) {
-				ProjectData projectData = project.getProjectData();
-				DomainFile domainFile = projectData.getFile(projectFolderPath + "/" + loadedName);
+			else {
+				if (project == null) {
+					throw new LoadException("Cannot load only libraries...project is null");
+				}
+				DomainFile domainFile =
+					project.getProjectData().getFile(projectFolderPath + "/" + loadedName);
 				if (domainFile == null) {
 					throw new LoadException(
 						"Cannot load only libraries for a non-existant program");
 				}
+				if (!Program.class.isAssignableFrom(domainFile.getDomainObjectClass())) {
+					throw new LoadException("Cannot load only libraries for a non-program");
+				}
 				program = (Program) domainFile.getOpenedDomainObject(consumer);
 				if (program == null) {
-					throw new LoadException("Failed to acquire a Program");
+					throw new LoadException("Failed to acquire an open Program");
 				}
-				loadedProgramList.add(new Loaded<>(program, domainFile));
+				loadedProgramList.add(new LoadedOpen<>(program, domainFile, consumer));
 				libraryNameList.addAll(getLibraryNames(provider, program));
 			}
 
 			// Load the libraries
-			List<Loaded<Program>> libraries = loadLibraries(provider, program, project,
-				projectFolderPath, loadSpec, options, log, consumer, libraryNameList, monitor);
-			loadedProgramList.addAll(libraries);
+			loadedProgramList.addAll(loadLibraries(provider, program, project, projectFolderPath,
+				loadSpec, options, log, consumer, libraryNameList, monitor));
 
 			success = true;
 			return loadedProgramList;
 		}
 		finally {
 			if (!success) {
-				release(loadedProgramList, consumer);
+				loadedProgramList.forEach(Loaded::close);
 			}
 		}
 	}
@@ -154,28 +213,63 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		log.appendMsg("--------------------------------------------------------------------\n");
 	}
 
+	/**
+	 * {@inheritDoc}
+	 * <p>
+	 * Fix up program's external library entries so that they point to a path in the project.
+	 */
 	@Override
 	protected void postLoadProgramFixups(List<Loaded<Program>> loadedPrograms, Project project,
-			List<Option> options, MessageLog messageLog, TaskMonitor monitor)
+			LoadSpec loadSpec, List<Option> options, MessageLog log, TaskMonitor monitor)
 			throws CancelledException, IOException {
-		if (loadedPrograms.isEmpty()) {
+		if (loadedPrograms.isEmpty() ||
+			(!isLinkExistingLibraries(options) && !isLoadLibraries(options))) {
 			return;
 		}
-		if (isLinkExistingLibraries(options) || isLoadLibraries(options)) {
-			String projectFolderPath = loadedPrograms.get(0).getProjectFolderPath();
-			List<DomainFolder> searchFolders = new ArrayList<>();
-			String destPath = getLibraryDestinationFolderPath(project, projectFolderPath, options);
-			DomainFolder destSearchFolder =
-				getLibraryDestinationSearchFolder(project, destPath, options);
-			DomainFolder linkSearchFolder =
-				getLinkSearchFolder(project, projectFolderPath, options);
-			if (destSearchFolder != null) {
-				searchFolders.add(destSearchFolder);
+
+		List<DomainFolder> searchFolders =
+			getLibrarySearchFolders(loadedPrograms, project, options, log);
+
+		Program firstProgram = loadedPrograms.getFirst().getDomainObject(this);
+		List<LibrarySearchPath> searchPaths;
+		try {
+			searchPaths = getLibrarySearchPaths(firstProgram, loadSpec, options, log, monitor);
+		}
+		finally {
+			firstProgram.release(this);
+		}
+
+		List<Loaded<Program>> saveablePrograms = loadedPrograms
+				.stream()
+				.filter(loaded -> loaded.check(Predicate.not(Program::isTemporary)))
+				.toList();
+
+		monitor.initialize(saveablePrograms.size());
+		for (Loaded<Program> loadedProgram : saveablePrograms) {
+			monitor.increment();
+
+			Program program = loadedProgram.getDomainObject(this);
+			try {
+				ExternalManager extManager = program.getExternalManager();
+				String[] extLibNames = extManager.getExternalLibraryNames();
+				if (extLibNames.length == 0 ||
+					(extLibNames.length == 1 && Library.UNKNOWN.equals(extLibNames[0]))) {
+					continue; // skip program if no libraries defined
+				}
+
+				monitor.setMessage("Resolving..." + program.getName());
+				int id = program.startTransaction("Resolving external references");
+				try {
+					resolveExternalLibraries(program, saveablePrograms, searchFolders, searchPaths,
+						options, monitor, log);
+				}
+				finally {
+					program.endTransaction(id, true);
+				}
 			}
-			if (linkSearchFolder != null) {
-				searchFolders.add(linkSearchFolder);
+			finally {
+				program.release(this);
 			}
-			fixupExternalLibraries(loadedPrograms, searchFolders, messageLog, monitor);
 		}
 	}
 
@@ -262,15 +356,17 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * Gets the {@link DomainFolder project folder} to search for existing libraries
 	 * 
 	 * @param project The {@link Project}. Could be null if there is no project.
+	 * @param program The {@link Program} being loaded
 	 * @param projectFolderPath The project folder path the program will get saved to. Could be null
 	 *   if the program is not getting saved to the project.
 	 * @param options a {@link List} of {@link Option}s
+	 * @param log The log
 	 * @return The path of the project folder to search for existing libraries, or null if no
 	 *   project folders can be or should be searched
 	 */
-	protected DomainFolder getLinkSearchFolder(Project project, String projectFolderPath,
-			List<Option> options) {
-		if (!shouldSearchAllPaths(options) && !isLinkExistingLibraries(options)) {
+	protected DomainFolder getLinkSearchFolder(Project project, Program program,
+			String projectFolderPath, List<Option> options, MessageLog log) {
+		if (!shouldSearchAllPaths(program, options, log) && !isLinkExistingLibraries(options)) {
 			return null;
 		}
 		if (project == null) {
@@ -374,13 +470,46 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	}
 
 	/**
+	 * Gets a {@link List} of library search {@link DomainFolder folders} based on the current
+	 * options
+	 * 
+	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
+	 * @param project The {@link Project} to load into. Could be null if there is no project.
+	 * @param options The {@link List} of {@link Option}s
+	 * @param log The log
+	 * @return A {@link List} of library search {@link DomainFolder folders} based on the current
+	 * options
+	 */
+	protected List<DomainFolder> getLibrarySearchFolders(List<Loaded<Program>> loadedPrograms,
+			Project project, List<Option> options, MessageLog log) {
+		Program firstProgram = loadedPrograms.getFirst().getDomainObject(this);
+		try {
+			List<DomainFolder> searchFolders = new ArrayList<>();
+			String projectFolderPath = loadedPrograms.get(0).getProjectFolderPath();
+			String destPath = getLibraryDestinationFolderPath(project, projectFolderPath, options);
+			DomainFolder destSearchFolder =
+				getLibraryDestinationSearchFolder(project, destPath, options);
+			DomainFolder linkSearchFolder =
+				getLinkSearchFolder(project, firstProgram, projectFolderPath, options, log);
+			Optional.ofNullable(destSearchFolder).ifPresent(searchFolders::add);
+			Optional.ofNullable(linkSearchFolder).ifPresent(searchFolders::add);
+			return searchFolders;
+		}
+		finally {
+			firstProgram.release(this);
+		}
+	}
+
+	/**
 	 * Checks whether or not to search for libraries using all possible search paths, regardless
 	 * of what options are set
 	 * 
+	 * @param program The {@link Program} being loaded
 	 * @param options a {@link List} of {@link Option}s
+	 * @param log The log
 	 * @return True if all possible search paths should be used, regardless of what options are set
 	 */
-	protected boolean shouldSearchAllPaths(List<Option> options) {
+	protected boolean shouldSearchAllPaths(Program program, List<Option> options, MessageLog log) {
 		return false;
 	}
 
@@ -433,6 +562,8 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @param libraryName The name of the library
 	 * @param libraryFsrl The library {@link FSRL}
 	 * @param provider The library bytes
+	 * @param unprocessed The {@link Queue} of {@link UnprocessedLibrary unprocessed libraries}
+	 * @param depth The load depth of the library to load
 	 * @param loadSpec The {@link LoadSpec} used for the load
 	 * @param options The options
 	 * @param log The log
@@ -441,13 +572,14 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @throws CancelledException If the user cancelled the action
 	 */
 	protected void processLibrary(Program library, String libraryName, FSRL libraryFsrl,
-			ByteProvider provider, LoadSpec loadSpec, List<Option> options, MessageLog log,
-			TaskMonitor monitor) throws IOException, CancelledException {
+			ByteProvider provider, Queue<UnprocessedLibrary> unprocessed, int depth,
+			LoadSpec loadSpec, List<Option> options, MessageLog log, TaskMonitor monitor)
+			throws IOException, CancelledException {
 		// Default behavior is to do nothing
 	}
 
 	/**
-	 * Loads the given list of libraries into the given {@link DomainFolder folder}
+	 * Loads the given list of libraries as {@link Loaded} {@link Program}s
 	 *
 	 * @param provider The {@link ByteProvider} of the program being loaded
 	 * @param program The {@link Program} being loaded
@@ -471,14 +603,14 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 
 		List<Loaded<Program>> loadedPrograms = new ArrayList<>();
 		Set<String> processed = new TreeSet<>(getLibraryNameComparator());
-		Queue<UnprocessedLibrary> unprocessed =
-			createUnprocessedQueue(libraryNameList, getLibraryLoadDepth(options));
+		Queue<UnprocessedLibrary> unprocessed = createUnprocessedQueue(libraryNameList, options);
 		boolean loadLibraries = isLoadLibraries(options);
-		List<FileSystemSearchPath> customSearchPaths =
+		List<LibrarySearchPath> customSearchPaths =
 			getCustomLibrarySearchPaths(provider, options, log, monitor);
-		List<FileSystemSearchPath> searchPaths =
-			getLibrarySearchPaths(provider, program, options, log, monitor);
-		DomainFolder linkSearchFolder = getLinkSearchFolder(project, projectFolderPath, options);
+		List<LibrarySearchPath> searchPaths =
+			getLibrarySearchPaths(program, desiredLoadSpec, options, log, monitor);
+		DomainFolder linkSearchFolder =
+			getLinkSearchFolder(project, program, projectFolderPath, options, log);
 		String libraryDestFolderPath =
 			getLibraryDestinationFolderPath(project, projectFolderPath, options);
 		DomainFolder libraryDestFolder =
@@ -489,64 +621,37 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 			while (!unprocessed.isEmpty()) {
 				monitor.checkCancelled();
 				UnprocessedLibrary unprocessedLibrary = unprocessed.remove();
-				String libraryName = unprocessedLibrary.name();
+				String library = unprocessedLibrary.name().trim();
 				int depth = unprocessedLibrary.depth();
-				if (depth == 0 || processed.contains(libraryName)) {
+				if (depth == 0 || processed.contains(library)) {
 					continue;
 				}
-				processed.add(libraryName);
-				if (libraryDestFolder != null &&
-					findLibrary(libraryName, libraryDestFolder) != null) {
-					log.appendMsg("Found %s in %s...".formatted(libraryName, libraryDestFolder));
+				processed.add(library);
+				if (findLibraryInProject(library, libraryDestFolder, searchPaths, options,
+					monitor) != null) {
+					log.appendMsg("Found %s in %s...".formatted(library, libraryDestFolder));
 					log.appendMsg("------------------------------------------------\n");
 				}
-				else if (linkSearchFolder != null &&
-					findLibrary(libraryName, linkSearchFolder) != null) {
-					log.appendMsg("Found %s in %s...".formatted(libraryName, linkSearchFolder));
+				else if (findLibraryInProject(library, linkSearchFolder, searchPaths, options,
+					monitor) != null) {
+					log.appendMsg("Found %s in %s...".formatted(library, linkSearchFolder));
 					log.appendMsg("------------------------------------------------\n");
 				}
-				else if (!customSearchPaths.isEmpty() || !searchPaths.isEmpty()) {
-					// Note that it is possible to have search paths with those
-					// options turned off (if shouldSearchAllPaths() is overridden to return true).
-					// In this case, we still want to process those libraries, but we 
-					// do not want to save them, so they can be released.
-					boolean loaded = false;
-					if (!customSearchPaths.isEmpty()) {
-						log.appendMsg("Searching %d custom path%s for library %s...".formatted(
-							customSearchPaths.size(), customSearchPaths.size() > 1 ? "s" : "",
-							libraryName));
-						Loaded<Program> loadedLibrary = loadLibraryFromSearchPaths(libraryName,
-							provider, customSearchPaths, libraryDestFolderPath, unprocessed, depth,
-							desiredLoadSpec, options, log, consumer, monitor);
-						if (loadedLibrary != null) {
-							loaded = true;
-							loadedPrograms.add(loadedLibrary);
-						}
+				else if (isLoadLibraries(options) || shouldSearchAllPaths(program, options, log)) {
+					Loaded<Program> loadedLibrary = loadLibraryFromSearchPaths(library, provider,
+						project, customSearchPaths, libraryDestFolderPath, unprocessed, depth,
+						desiredLoadSpec, options, log, consumer, monitor);
+					if (loadedLibrary == null) {
+						loadedLibrary = loadLibraryFromSearchPaths(library, provider, project,
+							searchPaths, libraryDestFolderPath, unprocessed, depth, desiredLoadSpec,
+							options, log, consumer, monitor);
 					}
-					if (!loaded && !searchPaths.isEmpty()) {
-						log.appendMsg("Searching %d path%s for library %s...".formatted(
-							searchPaths.size(), searchPaths.size() > 1 ? "s" : "", libraryName));
-						Loaded<Program> loadedLibrary = loadLibraryFromSearchPaths(libraryName,
-							provider, searchPaths, libraryDestFolderPath, unprocessed, depth,
-							desiredLoadSpec, options, log, consumer, monitor);
-						if (loadedLibrary != null) {
-							if (loadLibraries) {
-								loaded = true;
-								loadedPrograms.add(loadedLibrary);
-							}
-							else {
-								loadedLibrary.release(consumer);
-							}
-						}
-					}
-					else {
-						if (loaded) {
-							log.appendMsg("Saving library to: " +
-								loadedPrograms.get(loadedPrograms.size() - 1).toString());
-						}
-						else {
-							log.appendMsg("Library not saved to project.");
-						}
+					if (loadedLibrary != null) {
+						boolean temporary = !loadLibraries || unprocessedLibrary.temporary();
+						loadedLibrary.apply(p -> p.setTemporary(temporary));
+						loadedPrograms.add(loadedLibrary);
+						log.appendMsg(temporary ? "Library not saved to project."
+								: "Saving library to: " + loadedLibrary);
 					}
 					log.appendMsg("------------------------------------------------\n");
 				}
@@ -556,7 +661,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		}
 		finally {
 			if (!success) {
-				release(loadedPrograms, consumer);
+				loadedPrograms.forEach(Loaded::close);
 			}
 			Stream.of(customSearchPaths, searchPaths)
 					.flatMap(Collection::stream)
@@ -565,6 +670,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 							fsSearchPath.fsRef().close();
 						}
 					});
+			FileSystemService.getInstance().closeUnusedFileSystems();
 		}
 	}
 
@@ -572,9 +678,10 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * Loads the given library into the given {@link DomainFolder folder} if it can find it in
 	 * the given {@link List} of search paths
 	 *
-	 * @param libraryName The name of the library to load
+	 * @param library The library to load
 	 * @param provider The {@link ByteProvider} of the program being loaded
-	 * @param fsSearchPaths A {@link List} of {@link FileSystemSearchPath}s that will be searched
+	 * @param project The {@link Project}. Could be null if there is no project.
+	 * @param searchPaths A {@link List} of {@link LibrarySearchPath}s that will be searched
 	 * @param libraryDestFolderPath The path of the project folder to load the libraries into. 
 	 *   Could be null if the specified project is null or a destination folder path could not be 
 	 *   determined.
@@ -590,29 +697,27 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @throws IOException if there was an IO-related problem loading
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	private Loaded<Program> loadLibraryFromSearchPaths(String libraryName,
-			ByteProvider provider, List<FileSystemSearchPath> fsSearchPaths,
-			String libraryDestFolderPath, Queue<UnprocessedLibrary> unprocessed, int depth,
-			LoadSpec desiredLoadSpec, List<Option> options, MessageLog log, Object consumer,
-			TaskMonitor monitor) throws CancelledException, IOException {
+	private Loaded<Program> loadLibraryFromSearchPaths(String library, ByteProvider provider,
+			Project project, List<LibrarySearchPath> searchPaths, String libraryDestFolderPath,
+			Queue<UnprocessedLibrary> unprocessed, int depth, LoadSpec desiredLoadSpec,
+			List<Option> options, MessageLog log, Object consumer, TaskMonitor monitor)
+			throws CancelledException, IOException {
 
-		libraryName = libraryName.trim();
-		Program library = null;
-		if (libraryDestFolderPath != null) {
-			String libraryPath = FilenameUtils.getPath(libraryName);
-			if (libraryPath != null && !libraryPath.isEmpty()) {
-				if (!libraryDestFolderPath.endsWith("/")) {
-					libraryDestFolderPath += "/";
-				}
-				libraryDestFolderPath += libraryPath;
-			}
+		if (searchPaths.isEmpty()) {
+			return null;
 		}
-		String simpleLibraryName = FilenameUtils.getName(libraryName);
+
+		log.appendMsg("Searching %d path%s for library %s...".formatted(searchPaths.size(),
+			searchPaths.size() > 1 ? "s" : "", library));
+
+		Program libraryProgram = null;
+		String simpleLibraryName = FilenameUtils.getName(library);
+		boolean isAbsolute = new File(library).isAbsolute();
 
 		boolean success = false;
 		try {
 			List<FSRL> candidateLibraryFsrls =
-				findLibrary(getCheckedPath(libraryName), fsSearchPaths, log, monitor);
+				findLibraryOnDisk(library, searchPaths, log, monitor);
 			if (candidateLibraryFsrls.isEmpty()) {
 				log.appendMsg("Library not found.");
 				return null;
@@ -621,34 +726,38 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 			for (FSRL candidateLibraryFsrl : candidateLibraryFsrls) {
 				monitor.checkCancelled();
 				List<String> newLibraryList = new ArrayList<>();
-				library = loadLibrary(simpleLibraryName, candidateLibraryFsrl,
+				libraryProgram = loadLibrary(simpleLibraryName, candidateLibraryFsrl,
 					desiredLoadSpec, newLibraryList, options, consumer, log, monitor);
 				for (String newLibraryName : newLibraryList) {
-					unprocessed.add(new UnprocessedLibrary(newLibraryName, depth - 1));
+					unprocessed.add(new UnprocessedLibrary(newLibraryName, depth - 1, false));
 				}
-				if (library == null) {
+				if (libraryProgram == null) {
 					continue;
 				}
-				processLibrary(library, libraryName, candidateLibraryFsrl, provider,
-					desiredLoadSpec, options, log, monitor);
+				processLibrary(libraryProgram, library, candidateLibraryFsrl, provider, unprocessed,
+					depth, desiredLoadSpec, options, log, monitor);
 				success = true;
-				return new Loaded<Program>(library, simpleLibraryName, libraryDestFolderPath);
+				String folderPath = libraryDestFolderPath;
+				if (folderPath != null) {
+					if (isAbsolute) {
+						folderPath = joinPaths(folderPath, FilenameUtils.getFullPath(library));
+					}
+				}
+				return new Loaded<Program>(libraryProgram, simpleLibraryName, project, folderPath,
+					consumer);
 			}
 		}
-		catch (InvalidInputException e) {
-			log.appendMsg("Cannot load library with invalid name: \"" + libraryName + "\"");
-		}
 		finally {
-			if (!success && library != null) {
-				library.release(consumer);
+			if (!success && libraryProgram != null) {
+				libraryProgram.release(consumer);
 			}
 		}
 		return null;
 	}
 
 	/**
-	 * Find the library within the specified {@link DomainFolder folder}.  This method will handle 
-	 * relative path normalization.
+	 * Find the library within the specified {@link DomainFolder root search folder}.  This method 
+	 * will handle relative path normalization.
 	 * <p>
 	 * If the library path is a simple name without any path separators, only the given folder 
 	 * will be searched.
@@ -658,22 +767,28 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * <p>
 	 * If the library path has a path and it wasn't found under the given folder, the
 	 * filename part of library path will be used to search the given folder for matches.
-	 * <p>
-	 * @param libraryPath path with filename of the library to find
-	 * @param folder {@link DomainFolder} within which imported libraries will be searched.
-	 *   If null this method will return null.
+	 * 
+	 * @param library library to find
+	 * @param rootSearchFolder {@link DomainFolder root folder} within which imported libraries will
+	 *   be searched. If null this method will return null.
+	 * @param searchPaths A {@link List} of {@link LibrarySearchPath}s that will be searched
+	 * @param options The load options
+	 * @param monitor A cancelable task monitor
 	 * @return The found {@link DomainFile} or null if not found
+	 * @throws CancelledException if the user cancelled the load
 	 */
-	private DomainFile findLibrary(String libraryPath, DomainFolder folder) {
-		if (folder == null) {
+	protected DomainFile findLibraryInProject(String library, DomainFolder rootSearchFolder,
+			List<LibrarySearchPath> searchPaths, List<Option> options, TaskMonitor monitor)
+			throws CancelledException {
+		if (rootSearchFolder == null) {
 			return null;
 		}
 
 		// Lookup by full project path
 		// NOTE: probably no need to support optional extensions and case-insensitivity for this case
-		String projectPath = concatenatePaths(folder.getPathname(), libraryPath);
-		DomainFile ret =
-			folder.getProjectData().getFile(FilenameUtils.separatorsToUnix(projectPath));
+		String projectPath = joinPaths(rootSearchFolder.getPathname(), library);
+		ProjectData projectData = rootSearchFolder.getProjectData();
+		DomainFile ret = projectData.getFile(projectPath);
 		if (ret != null) {
 			return ret;
 		}
@@ -681,8 +796,8 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		// Quick lookup by library filename (ignoring full library path) in given folder.
 		// We try this first to hopefully avoid needing to iterate over the files in the folder
 		// factoring in case and extensions
-		String libraryName = FilenameUtils.getName(libraryPath);
-		if ((ret = folder.getFile(libraryName)) != null) {
+		String libraryName = FilenameUtils.getName(library);
+		if ((ret = rootSearchFolder.getFile(libraryName)) != null) {
 			return ret;
 		}
 
@@ -690,7 +805,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		// a match
 		boolean noExtension = FilenameUtils.getExtension(libraryName).equals("");
 		Comparator<String> comparator = getLibraryNameComparator();
-		for (DomainFile file : folder.getFiles()) {
+		for (DomainFile file : rootSearchFolder.getFiles()) {
 			String candidateName = file.getName();
 			if (isOptionalLibraryFilenameExtensions() && noExtension) {
 				candidateName = FilenameUtils.getBaseName(candidateName);
@@ -713,73 +828,39 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * each search path directory that is searched, and if not found, the filename part of
 	 * the library is used to search just the search path directory.
 	 * <p>
-	 * If the library specifies an absolute path, its native path is searched on the local 
+	 * If the library specifies an absolute path, its native path is also searched on the local 
 	 * filesystem.
-	 * <p>
-	 * @param libraryPath The library {@link Path}.  This will be either an absolute path, a
-	 *   relative path, or just a filename.
-	 * @param fsSearchPaths A {@link List} of {@link FileSystemSearchPath}s that will be searched
+	 * 
+	 * @param library The library. This will be either an absolute path, a relative path, or just a 
+	 *   filename.
+	 * @param searchPaths A {@link List} of {@link LibrarySearchPath}s that will be searched
 	 * @param log The log
 	 * @param monitor A cancelable task monitor
 	 * @return A {@link List} of {@link GFile files} that match the requested library path
 	 * @throws CancelledException if the user cancelled the operation
 	 */
-	private List<FSRL> findLibrary(Path libraryPath, List<FileSystemSearchPath> fsSearchPaths,
+	private List<FSRL> findLibraryOnDisk(String library, List<LibrarySearchPath> searchPaths,
 			MessageLog log, TaskMonitor monitor) throws CancelledException {
-		
+
 		List<FSRL> results = new ArrayList<>();
-		FileSystemService fsService = FileSystemService.getInstance();
 
-		Path libraryParentPath = libraryPath.getParent();
-		String libraryName = libraryPath.getFileName().toString();
-
-		for (FileSystemSearchPath fsSearchPath : fsSearchPaths) {
-			monitor.checkCancelled();
-
-			try {
-				// Handle 3 different library-lookup cases:
-
-				// 1) libraryPath is library name, relative path, or absolute path from the root
-				//    of the searchPath.  We need to join our fsSearchPath with our 
-				//    libraryParentPath
-				Path combinedParentPath =
-					ObjectUtils.allNotNull(fsSearchPath.fsPath(), libraryParentPath)
-							? fsSearchPath.fsPath().resolve(libraryParentPath)
-							: ObjectUtils.firstNonNull(fsSearchPath.fsPath(), libraryParentPath);
-				FSRL resolvedFsrl = resolveLibraryFile(fsSearchPath.fsRef().getFilesystem(),
-					combinedParentPath, libraryName);
-				if (resolvedFsrl != null) {
-					results.add(resolvedFsrl);
-					continue;
-				}
-
-				// 2) libraryPath is an absolute path and should be looked up as-is on the
-				//    LocalFileSystem.  Note that the root of the LocalFileSystem should not be
-				//    assumed to be in searchPaths for this case (otherwise case 1 would find it)
-				if (libraryParentPath != null && libraryParentPath.isAbsolute()) {
-					resolvedFsrl = resolveLibraryFile(fsService.getLocalFS(), libraryParentPath,
-						libraryName);
-					if (resolvedFsrl != null) {
-						results.add(resolvedFsrl);
-						continue;
-					}
-				}
-
-				// 3) libraryPath is some kind of path that we haven't found yet, so handle a
-				//    flat-directory structure by just appending filename part of the path to the
-				//    searchPath.  Not sure if this case is still necessary but supporting for
-				//    legacy support.
-				resolvedFsrl = resolveLibraryFile(fsSearchPath.fsRef().getFilesystem(),
-					fsSearchPath.fsPath(), libraryName);
-				if (resolvedFsrl != null) {
-					results.add(resolvedFsrl);
-					continue;
-				}
+		try {
+			for (LibrarySearchPath searchPath : searchPaths) {
+				monitor.checkCancelled();
+				String fullLibraryPath = joinPaths(searchPath.relativeFsPath(), library);
+				GFileSystem fs = searchPath.fsRef().getFilesystem();
+				FSRL fsrl = resolveLibraryFile(fs, fullLibraryPath);
+				Optional.ofNullable(fsrl).ifPresent(results::add);
 			}
-			catch (IOException e) {
-				log.appendException(e);
-				continue;
+
+			if (results.isEmpty() && new File(library).isAbsolute()) {
+				LocalFileSystem localFS = FileSystemService.getInstance().getLocalFS();
+				FSRL fsrl = resolveLibraryFile(localFS, library);
+				Optional.ofNullable(fsrl).ifPresent(results::add);
 			}
+		}
+		catch (IOException e) {
+			log.appendException(e);
 		}
 
 		return results;
@@ -852,7 +933,6 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		Program program = createProgram(provider, programName, imageBaseAddr, getName(), language,
 			compilerSpec, consumer);
 
-
 		int transactionID = program.startTransaction("Loading");
 		boolean success = false;
 		try {
@@ -897,102 +977,42 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		return libraryNames;
 	}
 
-	/**
-	 * For each {@link Loaded} {@link Program} in the given list, fix up its external library 
-	 * entries so that they point to a path in the project.
-	 * <p>
-	 * Other {@link Program}s in the given list are matched first, then the given 
-	 * {@link DomainFolder search folder} is searched for matches.
-	 *
-	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
-	 * @param searchFolders an ordered list of {@link DomainFolder}s which imported libraries will 
-	 *   be searched. These folders will be searched if a library is not found within the list of 
-	 *   programs supplied.
-	 * @param messageLog log for messages.
-	 * @param monitor the task monitor
-	 * @throws IOException if there was an IO-related problem resolving.
-	 * @throws CancelledException if the user cancelled the load.
-	 */
-	private void fixupExternalLibraries(List<Loaded<Program>> loadedPrograms,
-			List<DomainFolder> searchFolders, MessageLog messageLog, TaskMonitor monitor)
-			throws CancelledException, IOException {
-
-		monitor.initialize(loadedPrograms.size());
-		for (Loaded<Program> loadedProgram : loadedPrograms) {
-			monitor.increment();
-
-			Program program = loadedProgram.getDomainObject();
-			ExternalManager extManager = program.getExternalManager();
-			String[] extLibNames = extManager.getExternalLibraryNames();
-			if (extLibNames.length == 0 ||
-				(extLibNames.length == 1 && Library.UNKNOWN.equals(extLibNames[0]))) {
-				continue; // skip program if no libraries defined
-			}
-
-			monitor.setMessage("Resolving..." + program.getName());
-			int id = program.startTransaction("Resolving external references");
-			try {
-				resolveExternalLibraries(program, loadedPrograms, searchFolders, monitor,
-					messageLog);
-			}
-			finally {
-				program.endTransaction(id, true);
-			}
-		}
-	}
-
-	/**
-	 * Fix up program's external library entries so that they point to a path in the project.
-	 * <p>
-	 * Other programs in the map are matched first, then the ghidraLibSearchFolders 
-	 * are searched for matches.
-	 *
-	 * @param program the program whose Library entries are to be resolved.  An open 
-	 *   transaction on program is required.
-	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
-	 * @param searchFolders an order list of {@link DomainFolder}s which imported libraries will be
-	 *   searched. These folders will be searched if a library is not found within the list of 
-	 *   programs supplied.
-	 * @param messageLog log for messages.
-	 * @param monitor the task monitor
-	 * @throws CancelledException if the user cancelled the load.
-	 */
-	private void resolveExternalLibraries(Program program,
-			List<Loaded<Program>> loadedPrograms, List<DomainFolder> searchFolders,
-			TaskMonitor monitor, MessageLog messageLog) throws CancelledException {
+	private void resolveExternalLibraries(Program program, List<Loaded<Program>> loadedPrograms,
+			List<DomainFolder> searchFolders, List<LibrarySearchPath> fsSearchPaths,
+			List<Option> options, TaskMonitor monitor, MessageLog log)
+			throws CancelledException {
 		ExternalManager extManager = program.getExternalManager();
 		String[] extLibNames = extManager.getExternalLibraryNames();
-		messageLog.appendMsg(
-			"Linking the External Programs of '%s' to imported libraries..."
-					.formatted(program.getName()));
+		log.appendMsg("Linking the External Programs of '%s' to imported libraries..."
+				.formatted(program.getName()));
 		for (String externalLibName : extLibNames) {
 			if (Library.UNKNOWN.equals(externalLibName)) {
 				continue;
 			}
 			monitor.checkCancelled();
 			try {
-				Loaded<Program> matchingExtProgram = findLibrary(loadedPrograms, externalLibName);
-				if (matchingExtProgram != null) {
-					String path =
-						matchingExtProgram.getProjectFolderPath() + matchingExtProgram.getName();
+				Loaded<Program> match = findLibraryInLoadedList(loadedPrograms, externalLibName);
+				if (match != null) {
+					String path = match.getProjectFolderPath() + match.getName();
 					extManager.setExternalPath(externalLibName, path, false);
-					messageLog.appendMsg("  [" + externalLibName + "] -> [" + path + "]");
+					log.appendMsg("  [" + externalLibName + "] -> [" + path + "]");
 				}
 				else {
 					boolean found = false;
 					for (DomainFolder searchFolder : searchFolders) {
-						DomainFile alreadyImportedLib = findLibrary(externalLibName, searchFolder);
+						DomainFile alreadyImportedLib = findLibraryInProject(externalLibName,
+							searchFolder, fsSearchPaths, options, monitor);
 						if (alreadyImportedLib != null) {
 							extManager.setExternalPath(externalLibName,
 								alreadyImportedLib.getPathname(), false);
-							messageLog.appendMsg("  [" + externalLibName + "] -> [" +
+							log.appendMsg("  [" + externalLibName + "] -> [" +
 								alreadyImportedLib.getPathname() + "] (previously imported)");
 							found = true;
 							break;
 						}
 					}
 					if (!found) {
-						messageLog.appendMsg("  [" + externalLibName + "] -> not found in project");
+						log.appendMsg("  [" + externalLibName + "] -> not found in project");
 					}
 				}
 			}
@@ -1000,7 +1020,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 				Msg.error(this, "Bad library name: " + externalLibName, e);
 			}
 		}
-		messageLog.appendMsg("------------------------------------------------\n");
+		log.appendMsg("------------------------------------------------\n");
 	}
 
 	/**
@@ -1009,33 +1029,38 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @param name The name of the library
 	 * @param depth The recursive load depth of the library (based on the original binary being
 	 *   loaded)
+	 * @param temporary True if the library is temporary and should be discarded prior to returning
+	 *   from the load
 	 */
-	private record UnprocessedLibrary(String name, int depth) {/**/}
+	protected record UnprocessedLibrary(String name, int depth, boolean temporary) {/**/}
 
 	/**
 	 * Creates a new {@link Queue} of {@link UnprocessedLibrary}s, initialized filled with the
 	 * library names in the given list
 	 * 
 	 * @param libraryNames A {@link List} of unprocessed library names
-	 * @param depth The initial load depth of each library
+	 * @param options The options
 	 * @return A {@link Queue} of {@link UnprocessedLibrary}s
 	 */
-	private Queue<UnprocessedLibrary> createUnprocessedQueue(List<String> libraryNames, int depth) {
+	private Queue<UnprocessedLibrary> createUnprocessedQueue(List<String> libraryNames,
+			List<Option> options) {
+		int depth = getLibraryLoadDepth(options);
 		return libraryNames.stream()
-				.map(name -> new UnprocessedLibrary(name, depth))
+				.map(name -> new UnprocessedLibrary(name, depth, false))
 				.collect(Collectors.toCollection(LinkedList::new));
 	}
 
 	/**
-	 * A file system search path
+	 * A library search path
 	 * 
-	 * @param fsRef A {@link FileSystemRef}
-	 * @param fsPath A {@link Path} relative to the root of the file system, or null for the root
+	 * @param fsRef The root {@link FileSystemRef}
+	 * @param relativeFsPath A {@link Path} relative to the root of the file system, or null for the
+	 *   root
 	 */
-	protected record FileSystemSearchPath(FileSystemRef fsRef, Path fsPath) {}
+	protected record LibrarySearchPath(FileSystemRef fsRef, String relativeFsPath) {}
 
 	/**
-	 * Gets a {@link List} of priority-ordered custom {@link FileSystemSearchPath}s used to search 
+	 * Gets a {@link List} of priority-ordered custom {@link LibrarySearchPath}s used to search 
 	 * for libraries.  The default implementation of this method returns an empty {@link List}.
 	 * Subclasses can override it as needed.
 	 * 
@@ -1043,46 +1068,66 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @param options The options
 	 * @param log The log
 	 * @param monitor A cancelable task monitor
-	 * @return A {@link List} of priority-ordered custom {@link FileSystemSearchPath}s used to
+	 * @return A {@link List} of priority-ordered custom {@link LibrarySearchPath}s used to
 	 *   search for libraries
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	protected List<FileSystemSearchPath> getCustomLibrarySearchPaths(ByteProvider provider,
+	protected List<LibrarySearchPath> getCustomLibrarySearchPaths(ByteProvider provider,
 			List<Option> options, MessageLog log, TaskMonitor monitor) throws CancelledException {
 		return List.of();
 	}
 
 	/**
-	 * Gets a {@link List} of priority-ordered {@link FileSystemSearchPath}s used to search for 
+	 * Checks to make sure the given search path {@link FSRL} is valid before processing it.
+	 * Subclasses can override it as needed.
+	 * 
+	 * @param fsrl The search path {@link FSRL}
+	 * @param loadSpec The {@link LoadSpec} to use during load.
+	 * @param monitor A cancelable task monitor
+	 * @return True is the search path is valid; otherwise, false
+	 * @throws CancelledException if the user cancelled the load
+	 */
+	protected boolean isValidSearchPath(FSRL fsrl, LoadSpec loadSpec, TaskMonitor monitor)
+			throws CancelledException {
+		monitor.checkCancelled();
+		return true;
+	}
+
+	/**
+	 * Gets a {@link List} of priority-ordered {@link LibrarySearchPath}s used to search for 
 	 * libraries
 	 * 
-	 * @param provider The {@link ByteProvider} of the program being loaded
 	 * @param program The {@link Program} being loaded
+	 * @param loadSpec The {@link LoadSpec} to use during load
 	 * @param options The options
 	 * @param log The log
 	 * @param monitor A cancelable task monitor
-	 * @return A {@link List} of priority-ordered {@link FileSystemSearchPath}s used to search for 
+	 * @return A {@link List} of priority-ordered {@link LibrarySearchPath}s used to search for 
 	 *   libraries
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	private List<FileSystemSearchPath> getLibrarySearchPaths(ByteProvider provider, Program program,
+	protected List<LibrarySearchPath> getLibrarySearchPaths(Program program, LoadSpec loadSpec,
 			List<Option> options, MessageLog log, TaskMonitor monitor) throws CancelledException {
-		if (!isLoadLibraries(options) && !shouldSearchAllPaths(options)) {
+		if (!isLoadLibraries(options) && !shouldSearchAllPaths(program, options, log)) {
 			return List.of();
 		}
 
 		FileSystemService fsService = FileSystemService.getInstance();
-		List<FileSystemSearchPath> result = new ArrayList<>();
+		List<LibrarySearchPath> result = new ArrayList<>();
 		boolean success = false;
 		try {
-			for (FSRL fsrl : LibrarySearchPathManager.getLibraryFsrlList(provider, program, log,
-				monitor)) {
+			for (FSRL fsrl : LibrarySearchPathManager.getLibraryFsrlList(program, log, monitor)) {
+
+				if (!isValidSearchPath(fsrl, loadSpec, monitor)) {
+					continue;
+				}
+
 				if (fsService.isLocal(fsrl)) {
 					try {
 						FileSystemRef fileRef =
 							fsService.probeFileForFilesystem(fsrl, monitor, null);
 						if (fileRef != null) {
-							result.add(new FileSystemSearchPath(fileRef, null));
+							result.add(new LibrarySearchPath(fileRef, null));
 						}
 					}
 					catch (IOException e) {
@@ -1093,7 +1138,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 					try (RefdFile fileRef = fsService.getRefdFile(fsrl, monitor)) {
 						if (fileRef != null) {
 							File f = new File(fileRef.file.getPath()); // File API will sanitize Windows-style paths
-							result.add(new FileSystemSearchPath(fileRef.fsRef.dup(), f.toPath()));
+							result.add(new LibrarySearchPath(fileRef.fsRef.dup(), f.getPath()));
 						}
 					}
 					catch (IOException e) {
@@ -1110,16 +1155,17 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		}
 		return result;
 	}
-	
+
 	/**
-	 * Find the library within the given {@link Map} of {@link Program}s
+	 * Find the library within the given {@link List} of {@link Loaded} {@link Program}s
 	 * 
 	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
 	 * @param libraryName The library name to lookup.  Depending on the type of library, this could
 	 *   be a simple filename or an absolute path.
 	 * @return The found {@link Loaded} {@link Program} or null if not found
 	 */
-	private Loaded<Program> findLibrary(List<Loaded<Program>> loadedPrograms, String libraryName) {
+	protected Loaded<Program> findLibraryInLoadedList(List<Loaded<Program>> loadedPrograms,
+			String libraryName) {
 		Comparator<String> comparator = getLibraryNameComparator();
 		boolean noExtension = FilenameUtils.getExtension(libraryName).equals("");
 		boolean absolute = libraryName.startsWith("/");
@@ -1169,27 +1215,20 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * case-insensitive lookup may be allowed, and filename extensions may be optional.
 	 * 
 	 * @param fs The {@link GFileSystem file system} to resolve in
-	 * @param libraryParentPath The {@link Path} of the library's parent directory, relative to the
-	 *   given file system (could be null)
-	 * @param libraryName The library name
+	 * @param library The library. This will be either an absolute path, a relative path, or just a 
+	 *   filename.
 	 * @return The library resolved to an existing {@link FSRL}, or null if it did not resolve
 	 * @throws IOException If an IO-related problem occurred
 	 */
-	protected FSRL resolveLibraryFile(GFileSystem fs, Path libraryParentPath, String libraryName)
-			throws IOException {
-		String lpp = libraryParentPath != null 
-				? FilenameUtils.separatorsToUnix(libraryParentPath.toString())
-				: null;
-		String targetPath = FSUtilities.appendPath(lpp, libraryName);
-
+	protected FSRL resolveLibraryFile(GFileSystem fs, String library) throws IOException {
 		Comparator<String> baseNameComp = getLibraryNameComparator();
 		Comparator<String> nameComp = isOptionalLibraryFilenameExtensions() &&
-			FilenameUtils.getExtension(libraryName).isEmpty()
+			FilenameUtils.getExtension(library).isEmpty()
 					? (s1, s2) -> baseNameComp.compare(FilenameUtils.getBaseName(s1),
 						FilenameUtils.getBaseName(s2))
 					: baseNameComp;
 
-		GFile foundFile = fs.lookup(targetPath, nameComp);
+		GFile foundFile = fs.lookup(library, nameComp);
 		return foundFile != null && !foundFile.isDirectory() ? foundFile.getFSRL() : null;
 	}
 
@@ -1202,25 +1241,5 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		return isCaseInsensitiveLibraryFilenames()
 				? String.CASE_INSENSITIVE_ORDER
 				: (s1, s2) -> s1.compareTo(s2);
-	}
-
-	/**
-	 * Calls {@link Path#of(String, String...)} with the given parameter, throwing a checked
-	 * exception if a failure occurred.
-	 * <p>
-	 * NOTE: {@link Path#of(String, String...)} throws an unchecked exception, which has proven 
-	 * dangerous.
-	 * 
-	 * @param str The string to convert to a {@link Path}
-	 * @return The string converted to a {@link Path}
-	 * @throws InvalidInputException if the given string cannot be converted to a {@link Path}
-	 */
-	private Path getCheckedPath(String str) throws InvalidInputException {
-		try {
-			return Path.of(str);
-		}
-		catch (InvalidPathException e) {
-			throw new InvalidInputException(e.getMessage());
-		}
 	}
 }
